--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <hr />
-<h1 style="text-align: center;">4D Miner Mods</h1>
+<h1 style="text-align: center;"><span style="color: #99ccff;"><em>4D</em></span> <span style="color: #cc99ff;"><strong>Miner</strong> </span><span style="text-decoration: underline; color: #ccffcc;">Mods</span></h1>
 <hr />
 <p>&nbsp;</p>
 <p style="text-align: center;"><a href="/mods.html/"><button> MODS</button></a></p>
 <p style="text-align: center;"><a title="Contact Me" href="/contact.html/"><button>Contact Me</button></a></p>
 <p style="text-align: center;">&nbsp;</p>
 <hr />
-<p style="text-align: center;">&nbsp;</p>
+<p style="text-align: center;">&copy;astroiscool 2022</p>
