--- a/contact.html
+++ b/contact.html
@@ -1,8 +1,8 @@
 <h1 style="text-align: center;"><span style="color: #99ccff;"><em>4D</em></span> <span style="color: #cc99ff;"><strong>Miner</strong> </span><span style="text-decoration: underline; color: #ccffcc;">Mods</span></h1>
 <hr />
 <p>&nbsp;</p>
-<p style="text-align: center;"><a href="/mods.html"><button> MODS</button></a></p>
-<p style="text-align: center;"><a title="Contact Me" href="/index.html"><button>Back</button></a></p>
+<p style="text-align: center;"><a href="/4dminermods/mods.html"><button> MODS</button></a></p>
+<p style="text-align: center;"><a title="Contact Me" href="/4dminermods/index.html"><button>Back</button></a></p>
 <p style="text-align: center;">&nbsp;</p>
 <hr />
 <p style="text-align: center;">Add me on discord! - astronaut in the boat#8473</p>
